Otus.2/deploy/otus-2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-2-app
  namespace: otus-2
  labels:
    app: otus-2-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-2-app
  template:
    metadata:
      name: otus-2-app
      labels:
        app: otus-2-app
    spec:
      serviceAccountName: jobs-pods-reader
      containers:
        - name: otus-2-app
          image: otus.2:latest
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
