Otus.2/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-2-app
  namespace: otus-2
spec:
  selector:
    app: otus-2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
